[package]
name = "llm-shadow-relay"
version = "0.1.0"
edition = "2021"

[dependencies]
# HTTP server & middleware
axum = "0.7"
tower = "0.4"
tower-http = { version = "0.5", features = ["cors", "trace", "limit"] }

# HTTP client for upstream/downstream calls
reqwest = { version = "0.12", features = ["json", "stream"] }

# Async runtime
tokio = { version = "1", features = ["full"] }
futures = "0.3"

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Config
config = "0.14"

# Tracing
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Async streams
async-stream = "0.3"

# Utilities
bytes = "1"
thiserror = "1"
base64 = "0.22"
uuid = { version = "1", features = ["v4"] }

[dev-dependencies]
tokio-test = "0.4"

[profile.release]
lto = true
codegen-units = 1
